--- a/src/components/filter-card/style.scss
+++ b/src/components/filter-card/style.scss
@@ -14,6 +14,12 @@
     line-height: 24px;
     color: $brown;
 
+    button {
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+    }
+
     svg {
       margin-left: 12px;
       cursor: pointer;
