--- a/src/pages/category/style.scss
+++ b/src/pages/category/style.scss
@@ -176,6 +176,7 @@
         line-height: 24px;
         text-decoration-line: underline;
         color: $brown;
+        cursor: pointer;
       }
     }
   }
@@ -193,7 +194,7 @@
         gap: 15px;
 
         div {
-          margin-bottom: 15px;
+          //margin-bottom: 15px;
         }
       }
     }
