--- a/src/components/input-range/style.scss
+++ b/src/components/input-range/style.scss
@@ -14,6 +14,7 @@
       position: relative;
       padding: 9px 8px 7px 10px;
       width: 95px;
+      outline: none;
 
       &::before {
         content: 'руб';
@@ -29,18 +30,30 @@
     position: relative;
 
     input {
+      -webkit-appearance: none;
       width: 100%;
+      height: 2px;
+      background: #CCCCCC;
+      outline: none;
+      -webkit-transition: .2s;
 
-      &::-webkit-slider-thumb {
-        background: #CCCCCC;
-        height: 2px;
-
+      &.range-min::-webkit-slider-thumb,
+      &.range-max::-webkit-slider-thumb {
         -webkit-appearance: none;
+        appearance: none;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        cursor: pointer;
+        border: 4px solid $orange;
+        z-index: 1;
+        background-color: #fff;
       }
 
       &.range-max {
         position: absolute;
         left: 0;
+        top: 11px;
       }
     }
   }
