--- a/src/components/basket/style.scss
+++ b/src/components/basket/style.scss
@@ -1,5 +1,40 @@
 @import "src/styles/vars";
 
+.header__info-basket {
+  display: flex;
+  align-items: center;
+
+  &__price {
+    margin-right: 12px;
+
+    span {
+      display: block;
+      text-align: right;
+      color: $orange;
+      font-weight: 700;
+    }
+  }
+
+  .basket-image {
+    position: relative;
+    cursor: pointer;
+
+    &__circle {
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: -4px;
+      right: -6px;
+      border-radius: 50%;
+      background-color: $orange;
+      font-size: 12px;
+      line-height: 16px;
+      color: $white;
+      text-align: center;
+    }
+  }
+}
+
 .basket {
   min-width: 460px;
   background-color: $white;
