--- a/src/components/basket/style.scss
+++ b/src/components/basket/style.scss
@@ -17,7 +17,10 @@
 
   .basket-image {
     position: relative;
-    cursor: pointer;
+
+    svg {
+      cursor: pointer;
+    }
 
     &__circle {
       position: absolute;
