--- a/src/pages/checkout/style.scss
+++ b/src/pages/checkout/style.scss
@@ -111,6 +111,9 @@
           &__remove {
             text-decoration: underline;
             color: $orange;
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
           }
         }
 
@@ -388,6 +391,7 @@
       outline: none;
       width: 100%;
       padding: 16px 0;
+      cursor: pointer;
     }
   }
 }
