--- a/src/pages/profile/style.scss
+++ b/src/pages/profile/style.scss
@@ -75,6 +75,7 @@
           right: 40px;
           background-color: transparent;
           border: none;
+          cursor: pointer;
         }
 
         .phone,
@@ -492,6 +493,10 @@
       }
     }
   }
+}
+
+.editing-form {
+
 }
 
 @media (max-width: 1200px) {
