--- a/src/components/basket/style.scss
+++ b/src/components/basket/style.scss
@@ -86,6 +86,8 @@
         border: 1px solid #E7E7E7;
         border-radius: 5px;
         margin-right: 20px;
+        width: 92px;
+        height: 92px;
       }
 
       &__box {
