--- a/src/components/card/style.scss
+++ b/src/components/card/style.scss
@@ -15,6 +15,11 @@
     font-size: 15px;
     line-height: 20px;
     margin-bottom: 14px;
+    transition: all .5s;
+
+    &:hover {
+      color: $orange;
+    }
   }
 
   .horizontal {
