--- a/src/components/card/style.scss
+++ b/src/components/card/style.scss
@@ -42,6 +42,11 @@
       padding: 7px 10px;
       line-height: 24px;
       cursor: pointer;
+      transition: all .3s;
+
+      &:hover {
+        opacity: .5;
+      }
     }
   }
 
