--- a/src/pages/collection/style.scss
+++ b/src/pages/collection/style.scss
@@ -22,6 +22,7 @@
     &-img {
       width: 400px;
       height: 296px;
+      margin-right: 30px;
     }
 
     &-info {
@@ -184,7 +185,6 @@
         padding: 30px 0;
 
         & + & {
-          border-top: 1px solid rgba(214, 214, 214, 0.5);
           border-top: 1px solid rgba(214, 214, 214, 0.5);
         }
       }
