--- a/src/components/added-recipe-card/style.scss
+++ b/src/components/added-recipe-card/style.scss
@@ -6,6 +6,8 @@
   border: 1px solid #E7E7E7;
   border-radius: 5px;
   margin-top: 15px;
+  position: relative;
+  padding-bottom: 15px;
 
   &__info {
     margin-bottom: 10px;
@@ -30,6 +32,8 @@
 
   &__link {
     padding: 0 0 20px 20px;
+    position: absolute;
+    bottom: 0;
 
     a {
       margin-right: 10px;
