--- a/src/pages/delivery/style.scss
+++ b/src/pages/delivery/style.scss
@@ -14,15 +14,8 @@
     }
   }
 
-  &__title {
-    @include h2;
-    color: $brown;
-    padding-bottom: 30px;
-    border-bottom: 1px solid rgba($darkGrey, .3);
-    margin-bottom: 30px;
-  }
-
   &__payment {
+    border-top: 1px solid rgba($darkGrey, .3);
     padding-top: 30px;
 
     &-title {
