--- a/src/components/basket/style.scss
+++ b/src/components/basket/style.scss
@@ -151,6 +151,10 @@
   &__btn {
     text-align: center;
 
+    &:hover {
+      opacity: .7;
+    }
+
     a {
       font-size: 16px;
       line-height: 24px;
@@ -158,6 +162,10 @@
       background: #FD9339;
       border-radius: 5px;
       padding: 16px 120px;
+
+      &:hover {
+        color: $white;
+      }
     }
   }
 }
