--- a/src/components/counter/style.scss
+++ b/src/components/counter/style.scss
@@ -8,6 +8,12 @@
     border: 1px solid rgba(128, 128, 128, 0.2);
     border-radius: 5px;
 
+    svg {
+      path {
+        stroke: $darkGrey;
+      }
+    }
+
     &-block {
       font-size: 18px;
       line-height: 24px;
