--- a/src/pages/profile/style.scss
+++ b/src/pages/profile/style.scss
@@ -246,7 +246,7 @@
               width: 220px;
             }
 
-            &-subtitle {
+            &-manufacturer {
               font-size: 16px;
               line-height: 24px;
               color: $darkGrey;
