fixed styles conflict for button at basket component

--- a/src/components/button/style.scss
+++ b/src/components/button/style.scss
@@ -43,7 +43,7 @@
     background-color: #FF4F4F;
   }
 
-  &.basket {
+  &.basket-button {
     font-size: 16px;
     padding: 16px 0;
     width: 100%;
