added closing modal when user clicks outside the modal

--- a/src/components/modal-wrapper/style.scss
+++ b/src/components/modal-wrapper/style.scss
@@ -5,8 +5,12 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0,0,0, .5);
-  display: flex;
   align-items: center;
   justify-content: center;
   z-index: 100;
+  display: none;
+
+  &.active {
+    display: flex;
+  }
 }
