--- a/src/components/modals/login/style.scss
+++ b/src/components/modals/login/style.scss
@@ -22,6 +22,12 @@
     top: 20px;
     right: 30px;
     cursor: pointer;
+    background-color: transparent;
+    border: none;
+
+    &:hover {
+      opacity: .5;
+    }
   }
 
   &__form {
