--- a/src/pages/registration/style.scss
+++ b/src/pages/registration/style.scss
@@ -18,12 +18,7 @@
       margin-bottom: 52px;
     }
 
-    &-benefitts {
-
-    }
-
     &-benefit {
-
       & + & {
         margin-top: 30px;
       }
@@ -59,7 +54,6 @@
           padding: 13px 0 11px 14px;
           width: 100%;
           outline: none;
-          margin-bottom: 20px;
 
           &::placeholder {
             font-size: 15px;
@@ -153,6 +147,13 @@
       }
     }
   }
+}
+
+.input__error-message {
+  color: red;
+  text-decoration: underline;
+  font-size: 14px;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 1215px) {
