new util to render image from server, and added rendering image of product from server

--- a/src/pages/collections/style.scss
+++ b/src/pages/collections/style.scss
@@ -50,7 +50,8 @@
 
       &__image {
         margin-bottom: 16px;
-        width: 100%;
+        width: 386px;
+        height: 200px;
       }
 
       &__text {
