--- a/src/pages/product-page/style.scss
+++ b/src/pages/product-page/style.scss
@@ -59,7 +59,8 @@
           max-width: 360px;
 
           &-main {
-
+            width: 320px;
+            height: 280px;
           }
 
           &-group {
