--- a/src/components/card/style.scss
+++ b/src/components/card/style.scss
@@ -7,8 +7,10 @@
   border-radius: 6px;
   padding: 14px 14px 16px 14px;
 
-  img {
+  &__image {
     margin-bottom: 24px;
+    width: 180px;
+    height: 240px;
   }
 
   &__description {
