--- a/src/pages/profile/style.scss
+++ b/src/pages/profile/style.scss
@@ -201,7 +201,7 @@
               }
             }
 
-            &__image {
+            &-image {
               margin-bottom: 14px;
               width: 220px;
               height: 180px;
